Fix width on mobile of the comment area.

--- a/source/_css/style.css
+++ b/source/_css/style.css
@@ -191,7 +191,8 @@ code {
   .post .content,
   .post-list .title,
   .post-list-item,
-  .pagination {
+  .pagination,
+  .comments {
     width: 90%;
   }
 }
